# PokerBot-MAIF

./: .gitignore  CMakeLists.txt  README.md
include/: equity.h  game_state.h  node.h  odds_calculator.h  risk_profiler.h
include/mccfr/: node.h  train_state.h  trainer.h
src/: equity.cpp  game_state.cpp  main  main.cpp  node.cpp  odds_calculator.cpp  risk_profiler.cpp  risk_profiler.h
src/mccfr/: node.cpp  train_state.cpp  trainer.cpp
